// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`footerTpl slot test 1`] = `
<div>
  <div
    class="nut-card undefined"
  >
    <div
      class="nut-card__left"
    >
      <img
        alt=""
        src="//img10.360buyimg.com/n2/s240x240_jfs/t1/210890/22/4728/163829/6163a590Eb7c6f4b5/6390526d49791cb9.jpg!q70.jpg"
      />
    </div>
    <div
      class="nut-card__right"
    >
      <div
        class="nut-card__right__title"
      >
        活蟹】湖塘煙雨 阳澄湖大闸蟹公4.5两 母3.5两 4对8只 鲜活生鲜螃蟹现货水产礼盒海鲜水
      </div>
      <div
        class="nut-card__right__price"
      >
        <div
          class="nut-price "
        >
          <div
            class="nut-price__symbol"
          >
            ￥
          </div>
          <div
            class="nut-price__big"
          >
            388
          </div>
          <div
            class="nut-price__point"
          >
            .
          </div>
          <div
            class="nut-price__small"
          >
            00
          </div>
        </div>
        <div
          class="nut-price nut-card__right__price__origin"
        >
          <div
            class="nut-price__symbol"
          >
            ￥
          </div>
          <div
            class="nut-price__big"
          >
            378
          </div>
          <div
            class="nut-price__point"
          >
            .
          </div>
          <div
            class="nut-price__small"
          >
            00
          </div>
        </div>
      </div>
      <div
        class="nut-card__right__other"
      >
        <div>
          <div
            class="nut-tag
    nut-tag--danger
    
    
    
    "
          >
            <span
              class="text"
            >
              自营
            </span>
          </div>
        </div>
        <div>
          <div
            class="nut-tag
    nut-tag--default
    nut-tag--plain
    
    
    "
          >
            <span
              class="text"
            >
              厂商配送
            </span>
          </div>
        </div>
      </div>
      <div
        class="nut-card__right__shop"
      >
        <div
          class="nut-card__right__shop__name"
        >
          阳澄湖大闸蟹自营店&gt;
        </div>
        <div
          style="font-size: 12px;"
        >
          自定义
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`originTpl slot test 1`] = `
<div>
  <div
    class="nut-card undefined"
  >
    <div
      class="nut-card__left"
    >
      <img
        alt=""
        src="//img10.360buyimg.com/n2/s240x240_jfs/t1/210890/22/4728/163829/6163a590Eb7c6f4b5/6390526d49791cb9.jpg!q70.jpg"
      />
    </div>
    <div
      class="nut-card__right"
    >
      <div
        class="nut-card__right__title"
      >
        活蟹】湖塘煙雨 阳澄湖大闸蟹公4.5两 母3.5两 4对8只 鲜活生鲜螃蟹现货水产礼盒海鲜水
      </div>
      <div
        class="nut-card__right__price"
      >
        <div
          class="nut-price "
        >
          <div
            class="nut-price__symbol"
          >
            ￥
          </div>
          <div
            class="nut-price__big"
          >
            388
          </div>
          <div
            class="nut-price__point"
          >
            .
          </div>
          <div
            class="nut-price__small"
          >
            00
          </div>
        </div>
        <img
          alt=""
          src="https://img11.360buyimg.com/jdphoto/s58x28_jfs/t9451/359/415622649/15318/b0943e5d/59a78495N3bd2a9f8.png"
        />
      </div>
      <div
        class="nut-card__right__other"
      >
        <div>
          <div
            class="nut-tag
    nut-tag--danger
    
    
    
    "
          >
            <span
              class="text"
            >
              自营
            </span>
          </div>
        </div>
        <div>
          <div
            class="nut-tag
    nut-tag--default
    nut-tag--plain
    
    
    "
          >
            <span
              class="text"
            >
              厂商配送
            </span>
          </div>
        </div>
      </div>
      <div
        class="nut-card__right__shop"
      >
        <div
          class="nut-card__right__shop__name"
        >
          阳澄湖大闸蟹自营店&gt;
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`prolistTpl slot test 1`] = `
<div>
  <div
    class="nut-card undefined"
  >
    <div
      class="nut-card__left"
    >
      <img
        alt=""
        src="//img10.360buyimg.com/n2/s240x240_jfs/t1/210890/22/4728/163829/6163a590Eb7c6f4b5/6390526d49791cb9.jpg!q70.jpg"
      />
    </div>
    <div
      class="nut-card__right"
    >
      <div
        class="nut-card__right__title"
      >
        活蟹】湖塘煙雨 阳澄湖大闸蟹公4.5两 母3.5两 4对8只 鲜活生鲜螃蟹现货水产礼盒海鲜水
      </div>
      <div
        class="search_prolist_attr"
      >
        <span
          class="word"
        >
          鲜活
        </span>
        <span
          class="word"
        >
          礼盒
        </span>
        <span
          class="word"
        >
          国产
        </span>
      </div>
      <div
        class="nut-card__right__price"
      >
        <div
          class="nut-price "
        >
          <div
            class="nut-price__symbol"
          >
            ￥
          </div>
          <div
            class="nut-price__big"
          >
            388
          </div>
          <div
            class="nut-price__point"
          >
            .
          </div>
          <div
            class="nut-price__small"
          >
            00
          </div>
        </div>
        <div
          class="nut-price nut-card__right__price__origin"
        >
          <div
            class="nut-price__symbol"
          >
            ￥
          </div>
          <div
            class="nut-price__big"
          >
            378
          </div>
          <div
            class="nut-price__point"
          >
            .
          </div>
          <div
            class="nut-price__small"
          >
            00
          </div>
        </div>
      </div>
      <div
        class="nut-card__right__other"
      >
        <div>
          <div
            class="nut-tag
    nut-tag--danger
    
    
    
    "
          >
            <span
              class="text"
            >
              自营
            </span>
          </div>
        </div>
        <div>
          <div
            class="nut-tag
    nut-tag--default
    nut-tag--plain
    
    
    "
          >
            <span
              class="text"
            >
              厂商配送
            </span>
          </div>
        </div>
      </div>
      <div
        class="nut-card__right__shop"
      >
        <div
          class="nut-card__right__shop__name"
        >
          阳澄湖大闸蟹自营店&gt;
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props test 1`] = `
<div>
  <div
    class="nut-card undefined"
  >
    <div
      class="nut-card__left"
    >
      <img
        alt=""
        src="//img10.360buyimg.com/n2/s240x240_jfs/t1/210890/22/4728/163829/6163a590Eb7c6f4b5/6390526d49791cb9.jpg!q70.jpg"
      />
    </div>
    <div
      class="nut-card__right"
    >
      <div
        class="nut-card__right__title"
      >
        活蟹】湖塘煙雨 阳澄湖大闸蟹公4.5两 母3.5两 4对8只 鲜活生鲜螃蟹现货水产礼盒海鲜水
      </div>
      <div
        class="nut-card__right__price"
      >
        <div
          class="nut-price "
        >
          <div
            class="nut-price__symbol"
          >
            ￥
          </div>
          <div
            class="nut-price__big"
          >
            388
          </div>
          <div
            class="nut-price__point"
          >
            .
          </div>
          <div
            class="nut-price__small"
          >
            00
          </div>
        </div>
        <div
          class="nut-price nut-card__right__price__origin"
        >
          <div
            class="nut-price__symbol"
          >
            ￥
          </div>
          <div
            class="nut-price__big"
          >
            378
          </div>
          <div
            class="nut-price__point"
          >
            .
          </div>
          <div
            class="nut-price__small"
          >
            00
          </div>
        </div>
      </div>
      <div
        class="nut-card__right__other"
      >
        <div>
          <div
            class="nut-tag
    nut-tag--danger
    
    
    
    "
          >
            <span
              class="text"
            >
              自营
            </span>
          </div>
        </div>
        <div>
          <div
            class="nut-tag
    nut-tag--default
    nut-tag--plain
    
    
    "
          >
            <span
              class="text"
            >
              厂商配送
            </span>
          </div>
        </div>
      </div>
      <div
        class="nut-card__right__shop"
      >
        <div
          class="nut-card__right__shop__name"
        >
          阳澄湖大闸蟹自营店&gt;
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shopTagTpl slot test 1`] = `
<div>
  <div
    class="nut-card undefined"
  >
    <div
      class="nut-card__left"
    >
      <img
        alt=""
        src="//img10.360buyimg.com/n2/s240x240_jfs/t1/210890/22/4728/163829/6163a590Eb7c6f4b5/6390526d49791cb9.jpg!q70.jpg"
      />
    </div>
    <div
      class="nut-card__right"
    >
      <div
        class="nut-card__right__title"
      >
        活蟹】湖塘煙雨 阳澄湖大闸蟹公4.5两 母3.5两 4对8只 鲜活生鲜螃蟹现货水产礼盒海鲜水
      </div>
      <div
        class="nut-card__right__price"
      >
        <div
          class="nut-price "
        >
          <div
            class="nut-price__symbol"
          >
            ￥
          </div>
          <div
            class="nut-price__big"
          >
            388
          </div>
          <div
            class="nut-price__point"
          >
            .
          </div>
          <div
            class="nut-price__small"
          >
            00
          </div>
        </div>
        <div
          class="nut-price nut-card__right__price__origin"
        >
          <div
            class="nut-price__symbol"
          >
            ￥
          </div>
          <div
            class="nut-price__big"
          >
            378
          </div>
          <div
            class="nut-price__point"
          >
            .
          </div>
          <div
            class="nut-price__small"
          >
            00
          </div>
        </div>
      </div>
      <div
        class="nut-card__right__other"
      >
        <div>
          这里是自定义区域
        </div>
      </div>
      <div
        class="nut-card__right__shop"
      >
        <div
          class="nut-card__right__shop__name"
        >
          阳澄湖大闸蟹自营店&gt;
        </div>
      </div>
    </div>
  </div>
</div>
`;
